video alignment issue fixed, shows alert on share click on unsupported browsers (#10)

--- a/src/app/component/event-card/event-card.component.scss
+++ b/src/app/component/event-card/event-card.component.scss
@@ -2,3 +2,7 @@
 {
    background: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 100% 100%"><text fill="%239933cc" x="50%" y="50%" font-family="\'Lucida Grande\', sans-serif" font-size="20" text-anchor="middle">Loading video..</text></svg>') 0px 0px no-repeat;
 }
+
+.video {
+	max-width: 100% !important;
+}
